added empty duplex and fixed docker builds

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,8 +1,9 @@
 FROM grpc-build AS build-env
 
-ADD ./*.go /go/src/github.com/dojo/app/
+ADD ./*.go /go/src/github.com/NearlyUnique/grpc-dojo/client/
+ADD ./dojo/*.go /go/src/github.com/NearlyUnique/grpc-dojo/client/dojo/
 
-WORKDIR /go/src/github.com/dojo/app
+WORKDIR /go/src/github.com/NearlyUnique/grpc-dojo/client
 
 RUN go build -o /app
 
